20-routing/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.172.16.16.101.sslip.io`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
